# shortenurls

./: .gitignore  Cargo.toml  README.md  wrangler-example.toml
src/: auth.rs  lib.rs  structs.rs  utils.rs
