[package]
name = "shortenurls"
version = "1.0.0"
edition = "2022"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "0.1.2"
worker = "0.0.9"
serde_json = "1.0.67"
console_error_panic_hook = { version = "0.1.1", optional = true }
serde = "1.0.140"
regex = "1.6.0"
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.2"

[profile.release]
opt-level = "s"
